Fix server title bar spacings and hide SVG icon

--- a/midnight.css
+++ b/midnight.css
@@ -21,6 +21,12 @@ body {
     container-name: body;
 }
 
+.title__85643 {
+    svg {
+        opacity: 0 !important;
+    }
+}
+
 /* Servers List  */
 .guilds_c48ade {
     border-width: 0 !important;
@@ -105,15 +111,16 @@ body {
 
 /* Title bar */
 .bar_c38106 {
-    padding-left: 20px;
+    padding-left: 0px;
 
     .title_c38106 {
         justify-content: start;
         /* Server name in titlebar  */
         position: relative;
         &::after {
+            margin-left: 20px;
             content: var(--top-right-text);
-            top: 3px;
+            top: 0px;
             left: 0;
             position: absolute;
             color: var(--text-4);
@@ -1457,10 +1464,12 @@ body {
             justify-content: flex-start;
         }
         /* style top bar title */
-        .title__85643 .icon_f34534 {
-            width: 16px;
-            height: 16px;
-            display: none;
+        .title__85643 {
+            .icon_f34534 {
+                width: 16px;
+                height: 16px;
+                display: none;
+            }
         }
         .title__85643 .text-sm\/medium_cf4812 {
             line-height: 90%;
